fixes the z-index on player and deathzone

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -7,7 +7,7 @@
     background-color: black;
     color: crimson;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
 }
 
 #player>img {
